login page and structure of the app is done.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
+
+@use "primeicons/primeicons" as *;
+@use "tailwindcss" as *;
+
+@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
+
+body {
+  font-family: "Nunito";
+  color: var(--color);
+}
+
+.cstm-panel .p-panelmenu-panel {
+  border: 1px solid #2929bb !important;
+}
+.cstm-panel .pi-circle-off,
+.pi-circle-on {
+  font-size: 6px !important;
+}
