--- a/src/app/features/auth/login.component.html
+++ b/src/app/features/auth/login.component.html
@@ -1,1 +1,76 @@
-<p>login works!</p>
+<div
+  class="flex justify-center items-center min-h-screen bg-gradient-to-r"
+  [class.from-blue-50]="!commonService.isDarkMode"
+  [class.from-blue-100]="!commonService.isDarkMode"
+  [ngClass]="{
+    'from-gray-800 to-gray-900': commonService.isDarkMode
+  }"
+>
+  <p-card class="w-full max-w-md">
+    <!-- Logo Section -->
+    <div class="flex justify-center mb-4">
+      <img src="assets/logo/logo-small.png" alt="RIC Logo" class="h-20" />
+    </div>
+
+    <!-- Title Section -->
+    <h2 class="text-2xl font-bold text-center text-[#2467AA] mb-6">
+      Rawalpindi Institute of Cardiology (RIC)
+    </h2>
+
+    <!-- Login Form -->
+    <form>
+      <!-- Email Input -->
+      <div class="mb-4">
+        <label for="email" class="block text-gray-700 font-medium">Email</label>
+        <input
+          pInputText
+          id="email"
+          type="email"
+          placeholder="Enter your email"
+          class="w-full mt-1"
+        />
+      </div>
+
+      <!-- Password Input -->
+      <div class="mb-4">
+        <label for="password" class="block text-gray-700 font-medium mb-1"
+          >Password</label
+        >
+        <p-password
+          id="password1"
+          type="password"
+          [feedback]="false"
+          placeholder="Password"
+          [style]="{ width: '100%' }"
+          [inputStyle]="{ width: '100%' }"
+          [toggleMask]="true"
+          class="!w-full !mt-1"
+        ></p-password>
+      </div>
+
+      <!-- Remember Me Section -->
+      <div class="flex items-center justify-between mb-4">
+        <div class="flex items-center">
+          <p-checkbox formControlName="city" value="New York" inputId="ny" />
+          <label for="ny" class="ml-2">Remember me</label>
+        </div>
+        <a href="#" class="text-[#2467AA] hover:underline">Forgot password?</a>
+      </div>
+
+      <!-- Login Button -->
+      <button
+        pButton
+        label="Login"
+        class="w-full p-button-raised p-button-rounded p-button-primary text-white font-medium bg-[#2467AA] border-[#2467AA]"
+      ></button>
+    </form>
+
+    <!-- Register Section -->
+    <p class="text-center mt-4 text-gray-600">
+      Don't have an account?
+      <a href="/register" class="text-[#2467AA] hover:underline"
+        >Register here</a
+      >
+    </p>
+  </p-card>
+</div>
