--- a/src/app/features/auth/login.component.html
+++ b/src/app/features/auth/login.component.html
@@ -21,12 +21,14 @@
     <form>
       <!-- Email Input -->
       <div class="mb-4">
-        <label for="email" class="block text-gray-700 font-medium">Email</label>
+        <label for="email" class="block text-gray-700 font-medium"
+          >Username</label
+        >
         <input
           pInputText
-          id="email"
-          type="email"
-          placeholder="Enter your email"
+          id="username"
+          type="text"
+          placeholder="Enter your username"
           class="w-full mt-1"
         />
       </div>
