--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,3 +17,24 @@ body {
 .pi-circle-on {
   font-size: 6px !important;
 }
+
+// customizing the route animation
+/* Custom transition */
+@keyframes rotate-out {
+  to {
+    transform: rotate(90deg);
+  }
+}
+@keyframes rotate-in {
+  from {
+    transform: rotate(-90deg);
+  }
+}
+::view-transition-old(count),
+::view-transition-new(count) {
+  animation-duration: 200ms;
+  animation-name: -ua-view-transition-fade-in, rotate-in;
+}
+::view-transition-old(count) {
+  animation-name: -ua-view-transition-fade-out, rotate-out;
+}
