--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,13 +10,13 @@ body {
   color: var(--color);
 }
 
-.cstm-panel .p-panelmenu-panel {
-  border: 1px solid #2929bb !important;
-}
-.cstm-panel .pi-circle-off,
-.pi-circle-on {
-  font-size: 6px !important;
-}
+// .cstm-panel .p-panelmenu-panel {
+//   border: 1px solid #2929bb !important;
+// }
+// .cstm-panel .pi-circle-off,
+// .pi-circle-on {
+//   font-size: 6px !important;
+// }
 
 // customizing the route animation
 /* Custom transition */
