--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,15 @@
-<router-outlet />
+<div class="layout-container">
+    <!-- Sidebar -->
+    <aside class="sidebar">
+      <app-sidebar></app-sidebar>
+    </aside>
+  
+    <!-- Main Content -->
+    <div class="main-content">
+      <!-- Dynamic Content -->
+      <div class="page-content">
+        <router-outlet></router-outlet>
+      </div>
+    </div>
+  </div>
+  
