--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,8 @@
 .layout-container {
-    height: 100vh;
-  }
-  
-  /* Sidebar Styling */
+  height: 100vh;
+}
+
+/* Sidebar Styling */
 //   .sidebar {
 //     width: 250px;
 //     background-color: #2c3e50;
@@ -11,32 +11,27 @@
 //     position: fixed;
 //     height: 100vh;
 //   }
-  
-  /* Main Content */
-  .main-content {
-    flex-grow: 1;
-    margin-left: 250px; /* Same as sidebar width */
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-  }
-  
-  /* Navbar */
-  app-navbar {
-    height: 60px;
-    background-color: #34495e;
-    color: white;
-    display: flex;
-    align-items: center;
-    padding: 0 15px;
-  }
-  
-  /* Page Content */
-  .page-content {
-    flex-grow: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-  }
-  
+
+/* Main Content */
+.main-content {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+/* Navbar */
+app-navbar {
+  height: 60px;
+  background-color: #34495e;
+  color: white;
+  display: flex;
+  align-items: center;
+  padding: 0 15px;
+}
+
+/* Page Content */
+.page-content {
+  flex-grow: 1;
+  padding: 0px 20px;
+}
