--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -21,14 +21,14 @@
 }
 
 /* Navbar */
-app-navbar {
-  height: 60px;
-  background-color: #34495e;
-  color: white;
-  display: flex;
-  align-items: center;
-  padding: 0 15px;
-}
+// app-navbar {
+//   height: 60px;
+//   background-color: #34495e;
+//   color: white;
+//   display: flex;
+//   align-items: center;
+//   padding: 0 15px;
+// }
 
 /* Page Content */
 .page-content {
