--- a/src/app/features/auth/login.component.html
+++ b/src/app/features/auth/login.component.html
@@ -65,8 +65,8 @@
       <!-- Remember Me Section -->
       <div class="flex items-center justify-between mb-4">
         <div class="flex items-center">
-          <p-checkbox formControlName="city" value="New York" inputId="ny" />
-          <label for="ny" class="ml-2">Remember me</label>
+          <!-- <p-checkbox formControlName="city" value="New York" inputId="ny" />
+          <label for="ny" class="ml-2">Remember me</label> -->
         </div>
         <a href="#" class="text-[#2467AA] hover:underline">Forgot password?</a>
       </div>
