--- a/src/app/features/auth/login.component.html
+++ b/src/app/features/auth/login.component.html
@@ -123,6 +123,7 @@
         type="submit"
         pButton
         label="Login"
+        (click)="login()"
         class="w-full p-button-raised p-button-rounded p-button-primary text-white font-medium bg-[#2467AA] border-[#2467AA]"
       ></button>
     </form>
