--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div class="flex-1 p-0">
+<div class="flex-1 p-0 absolute right-0" [ngStyle]="{'width':isDrawerOpen?'calc(100% - 20rem)':'100%'}">
   <p-menubar [model]="topMenuItems">
     <!-- <ng-template #start>
       <svg
