--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -1,17 +1,12 @@
 <div class="flex-1 p-0 absolute right-0" [ngStyle]="{'width':isDrawerOpen?'calc(100% - 20rem)':'100%'}">
   <p-menubar [model]="topMenuItems">
-    <!-- <ng-template #start>
-      <svg
-        width="33"
-        height="35"
-        viewBox="0 0 33 35"
-        fill="none"
-        xmlns="http://www.w3.org/2000/svg"
-      >
-        <path d="..." fill="var(--primary-color)" />
-      </svg>
-    </ng-template> -->
+    
+    <ng-template #start>
+      <i *ngIf="!isDrawerOpen" (click)="toggleSidebar()" class="pi pi-align-justify
+      "></i>
+    </ng-template>
     <ng-template #item let-item let-root="root">
+      
       <a pRipple class="flex items-center p-menubar-item-link">
         <span>{{ item.label }}</span>
         <p-badge
