--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -5,22 +5,25 @@
 >
   <p-drawer
     [(visible)]="isDrawerOpen"
-    [closable]="true"
+    [closable]="false"
     [dismissible]="false"
     [autoZIndex]="true"
     [modal]="false"
   >
     <ng-template #header >
-      <div class="flex items-center gap-2" (click)=" toggleDrawer()">
-        <p-avatar
+      <div class="flex items-center justify-between w-full" >
+        <div class="flex items-center gap-2">
+
+          <p-avatar
           image="https://primefaces.org/cdn/primeng/images/demo/avatar/amyelsner.png"
           shape="circle"
-        />
-        <span class="font-bold">Amy Elsner</span>
-
+          />
+          <span class="font-bold">Amy Elsner</span>
+        </div>
+        <i (click)="toggleDrawer()" class="pi pi-align-justify
+        " ></i>
       </div>
-      <i class="pi pi-align-justify
-      "></i>
+      
     </ng-template>
 
     <p-panelmenu
