--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -83,6 +83,7 @@
           class="w-full"
           severity="danger"
           text
+          (click)="logout()"
         ></button>
       </div>
     </ng-template>
