Started working on Get Employee.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,18 +11,29 @@
 </div> -->
 
 @if(!(isLoginPage$ | async)){
-<div class="flex flex-col">
+<div class="flex flex-col h-full">
   <div class="flex flex-1">
     <app-sidebar />
 
-    <div class="flex-1">
+    <div
+      class="flex-1"
+      [ngStyle]="{
+        width: isDrawerOpen ? 'calc(100% - 20rem)' : '100%',
+      }"
+    >
       <app-navbar />
-      <div>
+      <div
+        style="margin-top: 60px"
+        [ngStyle]="{
+        marginLeft: isDrawerOpen ? '30px' : '0',
+      }"
+      >
         <router-outlet />
       </div>
     </div>
   </div>
 </div>
+
 }@else {
 <router-outlet />
 }
