Working on employee screen.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,3 +38,7 @@ body {
 ::view-transition-old(count) {
   animation-name: -ua-view-transition-fade-out, rotate-out;
 }
+
+.primary-text {
+  color: #2467aa;
+}
