--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,18 +11,22 @@
 </div> -->
 
 @if(!(isLoginPage$ | async)){
-<div class="flex flex-col">
-  <div class="flex flex-1">
-    <app-sidebar />
-
-    <div class="flex-1">
-      <app-navbar />
-      <div>
-        <router-outlet />
+  <div class="flex h-screen">
+    <!-- Sidebar on the left -->
+    <app-sidebar class="w-1/5 min-w-[200px] bg-gray-100" />
+  
+    <!-- Main content area -->
+    <div class="flex flex-col flex-1">
+      <!-- Navbar on top -->
+      <app-navbar class="w-full h-16 border-b border-gray-200" />
+  
+      <!-- Router outlet content centered -->
+      <div class="flex-1 flex  p-4">
+        <router-outlet></router-outlet>
       </div>
     </div>
   </div>
-</div>
+  
 }@else {
 <router-outlet />
 }
