--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -20,7 +20,7 @@
           />
           <span class="font-bold">Amy Elsner</span>
         </div>
-        <i (click)="toggleDrawer()" class="pi pi-align-justify
+        <i (click)="toggleDrawer()" class="fas fa-users-cog blue
         " ></i>
       </div>
       
