--- a/src/app/components/dynamic-form/dynamic-form.component.html
+++ b/src/app/components/dynamic-form/dynamic-form.component.html
@@ -1,4 +1,4 @@
-<h2>{{ formStructure.globalTitle }}</h2>
+<h2 class="text-2xl font-semibold">{{ formStructure.globalTitle }}</h2>
 
 <form [formGroup]="form" (ngSubmit)="onSubmit()">
 
@@ -39,25 +39,32 @@
 
    <!-- Flat Form View (if no tabs and no sections) -->
    <ng-template #simpleForm>
-    <div *ngFor="let field of formStructure.fields">
-      <label>{{ field.label }}</label>
-      <input 
-        *ngIf="field.type === 'text'" 
-        type="text" 
-        [formControlName]="field.name"
-      />
-      <select 
-        *ngIf="field.type === 'select'" 
-        [formControlName]="field.name"
-      >
-        <option 
-          *ngFor="let option of field.options" 
-          [value]="option.value"
-        >
-          {{ option.label }}
-        </option>
-      </select>
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+      <div *ngFor="let field of formStructure.fields" class="flex flex-col">
+        <label class="text-sm font-medium mb-1 ">{{ field.label }}</label>
+  
+        <!-- Text Input -->
+        <input *ngIf="field.type === 'text'" 
+               type="text" 
+               [formControlName]="field.name" 
+               class="p-inputtext p-component w-3/4 py-2 px-3 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"/>
+  
+        <!-- Select Input -->
+        <p-dropdown *ngIf="field.type === 'select'" 
+                    [options]="field.options" 
+                    optionLabel="label" 
+                    optionValue="value" 
+                    [formControlName]="field.name" 
+                    placeholder="Select {{ field.label }}" 
+                    class="w-3/4">
+        </p-dropdown>
+      </div>
     </div>
   </ng-template>
-  <button type="submit">Submit</button>
+  
+  <button type="submit" 
+          class="mt-4 bg-blue-500 hover:bg-blue-600 text-white font-semibold py-2 px-4 rounded-md transition duration-200">
+    Submit
+  </button>
+  
 </form>
