--- a/src/app/components/dynamic-form/dynamic-form.component.html
+++ b/src/app/components/dynamic-form/dynamic-form.component.html
@@ -47,6 +47,7 @@
         <input *ngIf="field.type === 'text'" 
                type="text" 
                [formControlName]="field.name" 
+               [placeholder]="field.placeholder || field.label"
                class="p-inputtext p-component w-3/4 py-2 px-3 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"/>
   
         <!-- Select Input -->
