--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,10 @@
 <div class="layout-container">
-  <!-- Sidebar -->
   <aside class="sidebar">
     <app-sidebar></app-sidebar>
   </aside>
+  <app-navbar style=" width: calc(100% - 20rem); "></app-navbar>
 
-  <!-- Main Content -->
   <div class="main-content">
-    <!-- Dynamic Content -->
     <div class="page-content">
       <router-outlet></router-outlet>
     </div>
