--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -22,12 +22,17 @@
 
 /* Navbar */
 app-navbar {
+  position: absolute;
+  top: 0;
+  right: 0;
+ 
   height: 60px;
-  background-color: #34495e;
-  color: white;
+  background-color: #fff; 
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   display: flex;
   align-items: center;
-  padding: 0 15px;
+  justify-content: flex-end; 
+  padding: 0 20px;
 }
 
 /* Page Content */
