--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -1,8 +1,8 @@
-<div class="flex flex-col">
   <!-- Top Navigation Menu -->
 
-  <div class="flex flex-1">
     <!-- Sidebar (Drawer) -->
+
+    <!-- sidebar component -->
     <div
       class="w-72 bg-gray-900 text-white p-4 flex flex-col justify-between"
       *ngIf="isDrawerOpen"
@@ -93,60 +93,3 @@
       </p-drawer>
     </div>
 
-    <!-- Main Content -->
-    <div class="flex-1">
-      <p-menubar [model]="topMenuItems">
-        <ng-template #start>
-          <svg
-            width="33"
-            height="35"
-            viewBox="0 0 33 35"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path d="..." fill="var(--primary-color)" />
-          </svg>
-        </ng-template>
-        <ng-template #item let-item let-root="root">
-          <a pRipple class="flex items-center p-menubar-item-link">
-            <span>{{ item.label }}</span>
-            <p-badge
-              *ngIf="item.badge"
-              [ngClass]="{ 'ml-auto': !root, 'ml-2': root }"
-            />
-            <span
-              *ngIf="item.shortcut"
-              class="ml-auto border border-surface rounded bg-emphasis text-muted-color text-xs p-1"
-              >{{ item.shortcut }}</span
-            >
-            <i
-              *ngIf="item.items"
-              [ngClass]="[
-                'ml-auto pi',
-                root ? 'pi-angle-down' : 'pi-angle-right'
-              ]"
-            ></i>
-          </a>
-        </ng-template>
-        <ng-template #end>
-          <div class="flex items-center gap-2">
-            <input type="text" pInputText placeholder="Search" class="w-36" />
-            <p-avatar
-              image="https://primefaces.org/cdn/primeng/images/demo/avatar/amyelsner.png"
-              shape="circle"
-            />
-
-            <p-togglebutton
-              [(ngModel)]="checked"
-              onLabel="Dark Theme"
-              offLabel="Light Theme"
-              styleClass="w-36"
-              ariaLabel="Change theme"
-              (onChange)="toggleTheme()"
-            />
-          </div>
-        </ng-template>
-      </p-menubar>
-    </div>
-  </div>
-</div>
