added the animated logo for the websiute.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,10 +3,9 @@
 @use "primeicons/primeicons" as *;
 @use "tailwindcss" as *;
 
-@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 body {
-  font-family: "Nunito";
+  font-family: "Inter";
   color: var(--color);
 }
 
