--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -1,12 +1,13 @@
-<div class="flex-1 p-0 absolute right-0" [ngStyle]="{'width':isDrawerOpen?'calc(100% - 20rem)':'100%'}">
+<div class="flex-1 p-0">
   <p-menubar [model]="topMenuItems">
-    
     <ng-template #start>
-      <i *ngIf="!isDrawerOpen" (click)="toggleSidebar()" class="pi pi-align-justify
-      "></i>
+      <i
+        *ngIf="!isDrawerOpen"
+        (click)="toggleSidebar()"
+        class="pi pi-align-justify"
+      ></i>
     </ng-template>
     <ng-template #item let-item let-root="root">
-      
       <a pRipple class="flex items-center p-menubar-item-link">
         <span>{{ item.label }}</span>
         <p-badge
