branch module added (mention in the swagger)

--- a/src/app/core/components/typetable/typetable.component.html
+++ b/src/app/core/components/typetable/typetable.component.html
@@ -1,4 +1,4 @@
-<p-dropdown
+<!-- <p-dropdown
   [options]="data()"
   [(ngModel)]="selectedBank"
   placeholder="Select a Bank"
@@ -7,7 +7,7 @@
   [showClear]="true"
 >
 </p-dropdown>
-<button pButton label="Add Country" (click)="showDialog()"></button>
+<button pButton label="Add Country" (click)="showDialog()"></button> -->
 
 <p-dialog header="Add New Designation" [visible]="displayDialog()">
   <div class="grid grid-cols-1 gap-4">
