--- a/src/app/components/dynamic-form/dynamic-form.component.html
+++ b/src/app/components/dynamic-form/dynamic-form.component.html
@@ -4,7 +4,8 @@
   <!-- Tabs View -->
   <p-tabs [value]="0" *ngIf="formStructure.tabs; else flatForm" [tabindex]="selectedTabIndex"  (valueChange)="onTabChange($event)"  scrollable >
     <p-tablist>
-      <p-tab *ngFor="let tab of formStructure.tabs; let i = index" [value]="i" [disabled]="currentTab()!==tab.tabName">
+      <p-tab *ngFor="let tab of formStructure.tabs; let i = index" [value]="i" >
+        <!-- [disabled]="currentTab()!==tab.tabName" -->
         {{ tab.tabName }}
       </p-tab>
     </p-tablist>
