--- a/src/app/components/dynamic-form/dynamic-form.component.html
+++ b/src/app/components/dynamic-form/dynamic-form.component.html
@@ -1,19 +1,29 @@
-<h2 class="text-2xl font-semibold">{{ formStructure.globalTitle }}</h2>
+<h2 class="text-2xl font-semibold mb-5">{{ formStructure.globalTitle }}</h2>
 
-<form [formGroup]="form" >
+<form [formGroup]="form">
   <!-- Tabs View -->
-  <p-tabs [value]="0" *ngIf="formStructure.tabs; else flatForm" [tabindex]="selectedTabIndex"  (valueChange)="onTabChange($event)"  scrollable >
+  <p-tabs
+    [value]="0"
+    *ngIf="formStructure.tabs; else flatForm"
+    [tabindex]="selectedTabIndex"
+    (valueChange)="onTabChange($event)"
+    scrollable
+  >
     <p-tablist>
-      <p-tab *ngFor="let tab of formStructure.tabs; let i = index" [value]="i" [disabled]="currentTab()!==tab.tabName">
+      <p-tab
+        *ngFor="let tab of formStructure.tabs; let i = index"
+        [value]="i"
+        [disabled]="currentTab() !== tab.tabName"
+      >
         {{ tab.tabName }}
       </p-tab>
     </p-tablist>
     <p-tabpanels>
-      <p-tabpanel 
+      <p-tabpanel
         *ngFor="let tab of formStructure.tabs; let i = index"
         [value]="i"
       >
-        <div  *ngFor="let section of tab.sections" class="mb-4">
+        <div *ngFor="let section of tab.sections" class="mb-4">
           <h3 class="text-xl font-semibold mb-2">{{ section.title }}</h3>
 
           <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
