--- a/src/app/core/components/table/table.component.html
+++ b/src/app/core/components/table/table.component.html
@@ -30,14 +30,13 @@
           icon="pi pi-filter-slash"
           (click)="clear(dt)"
         />
-        <button
+        <p-button
           p-button
           icon="pi pi-plus"
           (click)="showDialog()"
-          class="ml-2 bg-indigo-600 hover:bg-indigo-700 text-white font-medium py-2 px-4 rounded-md shadow-md transition duration-300 ease-in-out cursor-pointer"
-        >
-          Add Bank
-        </button>
+          label="Add Bank"
+          styleClass="ml-2"
+        />
 
         <p-iconfield iconPosition="left" class="ml-auto">
           <p-inputicon>
