--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -1,5 +1,5 @@
-<div class="flex-1 p-0">
-  <p-menubar [model]="topMenuItems">
+<div class="flex-1 p-0 text-white">
+  <p-menubar [model]="topMenuItems" styleClass="bg-blue-500">
     <ng-template #start>
       <i
         *ngIf="!isDrawerOpen"
@@ -8,8 +8,9 @@
       ></i>
     </ng-template>
     <ng-template #item let-item let-root="root">
-      <a pRipple class="flex items-center p-menubar-item-link">
+      <a pRipple class="flex items-center p-menubar-item-link text-white">
         <span>{{ item.label }}</span>
+        <!-- class="text-white" -->
         <p-badge
           *ngIf="item.badge"
           [ngClass]="{ 'ml-auto': !root, 'ml-2': root }"
@@ -21,10 +22,7 @@
         >
         <i
           *ngIf="item.items"
-          [ngClass]="[
-            'ml-auto pi',
-            root ? 'pi-angle-down' : 'pi-angle-right'
-          ]"
+          [ngClass]="['ml-auto pi', root ? 'pi-angle-down' : 'pi-angle-right']"
           [ngClass]="['ml-auto pi', root ? 'pi-angle-down' : 'pi-angle-right']"
         ></i>
       </a>
