--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -1,67 +1,84 @@
 <!-- Sidebar (Drawer) -->
 <div
-  class="w-72 bg-gray-900 text-white p-4 flex flex-col justify-between"
-  *ngIf="isDrawerOpen"
+  class="w-80 bg-gray-800 fixed text-white h-screen flex flex-col justify-between shadow-lg transition-all duration-300"
+  [ngClass]="{ 'ml-0': isDrawerOpen, '-ml-80': !isDrawerOpen }"
 >
-  <p-drawer
-    [(visible)]="isDrawerOpen"
-    [closable]="false"
-    [dismissible]="false"
-    [autoZIndex]="true"
-    [modal]="false"
-  >
-    <ng-template #header>
-      <div class="flex items-center justify-between w-full">
-        <div class="flex items-center gap-2">
-          <p-avatar
-            image="https://primefaces.org/cdn/primeng/images/demo/avatar/amyelsner.png"
-            shape="circle"
-          />
-          <span class="font-bold">Amy Elsner</span>
-        </div>
-        <i (click)="toggleDrawer()" class="pi pi-align-justify"></i>
+  <!-- Header -->
+  <div class="p-6 border-b border-gray-700">
+    <div class="flex items-center justify-between">
+      <div class="flex items-center gap-3">
+        <p-avatar
+          image="https://primefaces.org/cdn/primeng/images/demo/avatar/amyelsner.png"
+          shape="circle"
+          class="border-2 border-white shadow-sm"
+        />
+        <span class="font-semibold text-lg">Amy Elsner</span>
       </div>
-    </ng-template>
+      <i
+        (click)="toggleDrawer()"
+        class="pi pi-align-justify text-xl cursor-pointer hover:text-gray-400 transition-colors"
+      ></i>
+    </div>
+  </div>
 
+  <!-- Menu Items -->
+  <div class="flex-1 overflow-y-auto p-4 custom-scrollbar">
     <p-panelmenu
       *ngFor="let tab of sideBarTabs; let i = index"
       (click)="toggleMenu(tab.label)"
       [model]="[tab]"
       styleClass="w-full"
       [ngClass]="{ 'cstm-panel': tab.expanded, border0: !tab.expanded }"
-      [transitionOptions]="'0.3s cubic-bezier(0.68, -0.55, 0.27, 1.55)'"
+      [transitionOptions]="'300ms cubic-bezier(0.68, -0.55, 0.27, 1.55)'"
+      styleClass="mt-3 "
     >
       <ng-template #item let-item>
         <ng-container *ngIf="item.route; else urlRef">
           <a
             [routerLink]="item.route"
-            class="flex items-center cursor-pointer text-color px-3 py-2"
+            class="flex items-center text-white cursor-pointer hover:bg-gray-700 px-4 py-3 rounded-md transition-colors"
           >
-            <span [class]="item.icon"></span>
-            <span class="ml-2">{{ item.label }}</span>
+            <span [class]="item.icon" class="text-lg"></span>
+            <span class="ml-3 text-sm font-medium">{{ item.label }}</span>
+            <i
+              *ngIf="item.items"
+              class="pi ml-auto"
+              [ngClass]="{
+                'pi-angle-right': !item.expanded,
+                'pi-angle-down': item.expanded
+              }"
+            ></i>
           </a>
         </ng-container>
         <ng-template #urlRef>
           <a
             *ngIf="item.url; else noLink"
             [href]="item.url"
-            class="flex items-center cursor-pointer text-color px-3 py-2"
+            class="flex items-center hover:bg-gray-700 px-4 py-3 rounded-md transition-colors"
           >
-            <span [class]="item.icon"></span>
-            <span class="ml-2">{{ item.label }}</span>
+            <span [class]="item.icon" class="text-lg"></span>
+            <span class="ml-3 text-sm font-medium">{{ item.label }}</span>
+            <i
+              *ngIf="item.items"
+              class="pi ml-auto"
+              [ngClass]="{
+                'pi-angle-right': !item.expanded,
+                'pi-angle-down': item.expanded
+              }"
+            ></i>
           </a>
           <ng-template #noLink>
             <span
-              class="flex items-center cursor-pointer text-surface-700 dark:text-surface-0 px-4 py-2"
+              class="flex items-center text-white cursor-pointer hover:bg-gray-700 px-4 py-3 rounded-md transition-colors"
             >
-              <span [class]="item.icon"></span>
-              <span class="ml-2">{{ item.label }}</span>
+              <span [class]="item.icon" class="text-lg"></span>
+              <span class="ml-3 text-sm font-medium">{{ item.label }}</span>
               <i
                 *ngIf="item.items"
-                class="pi text-primary ml-auto"
+                class="pi ml-auto"
                 [ngClass]="{
-                  'pi-angle-left': tab.expanded,
-                  'pi-angle-down': !tab.expanded
+                  'pi-angle-right': !item.expanded,
+                  'pi-angle-down': item.expanded
                 }"
               ></i>
             </span>
@@ -69,26 +86,27 @@
         </ng-template>
       </ng-template>
     </p-panelmenu>
+  </div>
 
-    <ng-template #footer>
-      <div class="flex items-center gap-2">
-        <button
-          pButton
-          label="Account"
-          icon="pi pi-user"
-          class="w-full"
-          outlined
-        ></button>
-        <button
-          pButton
-          label="Logout"
-          icon="pi pi-sign-out"
-          class="w-full"
-          severity="danger"
-          text
-          (click)="logout()"
-        ></button>
-      </div>
-    </ng-template>
-  </p-drawer>
+  <!-- Footer -->
+  <div class="p-4 border-t border-gray-700">
+    <div class="flex items-center gap-2">
+      <button
+        pButton
+        label="Account"
+        icon="pi pi-user"
+        class="w-full bg-blue-600 hover:bg-blue-700 text-white font-medium py-2 px-4 rounded-md transition-colors"
+        outlined
+      ></button>
+      <button
+        pButton
+        label="Logout"
+        icon="pi pi-sign-out"
+        class="w-full bg-red-600 hover:bg-red-700 text-white font-medium py-2 px-4 rounded-md transition-colors"
+        severity="danger"
+        text
+        (click)="logout()"
+      ></button>
+    </div>
+  </div>
 </div>
